# Programowanie-Rownolegle-i-Rozproszone

./: .gitignore  CMakeLists.txt  README.md  main.c  mainMPI.c  utils.c  utils.h
Task13/: CMakeLists.txt  Nelder-Mead.c  Nelder-Mead.h  common.c  macros.h  nelderMead.c  nelderMead.h  nelderMeadMPI.c  nelderMeadMPI.h
Task13/Tests/: CMakeLists.txt  testNelderMead.c
scripts/: generate_README_table.py  process_logs.py  run_commands_from_README_table.sh  run_distributed_and_sequential_parallel_runs_fast_compare_functions-eVariable.sh  run_distributed_and_sequential_parallel_runs_fast_compare_functions_-eVariable.sh  run_distributed_and_sequential_parallel_runs_slow_compare_functions-tVariable-nVariable.sh  run_distributed_and_sequential_parallel_runs_slow_compare_functions-tVariable.sh  run_parallel_runs_fast-f1-s200.sh  run_parallel_runs_medium-f1-s1000.sh  run_parallel_runs_medium-f16-s200.sh  run_parallel_runs_slow-f1-s1500.sh  run_parallel_runs_slow-f16-s250.sh  run_parallel_runs_very_slow-f16-s500.sh  run_parallel_sequential_runs_compare_functions_slow.sh  run_parallel_sequential_runs_fast.sh  run_parallel_sequential_runs_fast_compare_functions-eVariable.sh  run_parallel_sequential_runs_fast_compare_functions_-eVariable.sh  run_parallel_sequential_runs_medium-f1-sVariable.sh  run_parallel_sequential_runs_readme_table_slow.sh  run_parallel_sequential_runs_slow.sh  run_parallel_sequential_runs_slow_compare_functions-sVariable.sh  run_regressions_fast.sh  run_sequential_parallel_runs_slow_compare_functions-tVariable.sh  run_tests_fast.sh  utils.sh
src/: CMakeLists.txt  logger.c  logger.h  utils.c  utils.h
src/Task13/: CMakeLists.txt  common.h  nelderMead.c  nelderMead.h  nelderMeadMPI.c  nelderMeadMPI.h
src/Task13/Tests/: CMakeLists.txt  testNelderMeadMPI.c
